added additional pages to make the navbar functional and some text to them

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav class="nav-bar">
                 <ul>
                     <li class="nav-item">
-                       <a href="" class="nav-button">Receptek</a>
+                       <a href="./recipes.html" class="nav-button">Receptek</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-button">Hozzavalok</a>
+                        <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-button">Rolunk</a>
+                        <a href="./about.html" class="nav-button">Rolunk</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-button">Elerhetosegek</a>
+                        <a href="./contact.html" class="nav-button">Elerhetosegek</a>
                     </li>
                 </ul>
         </nav>
@@ -31,20 +31,13 @@
     <main>
         <div id="main-box">
             <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2 id="main-header">Itt talalod a legjobb recepteket</h2>
+            <h2 id="main-header">Itt talalod a legjobb recepteket!</h2>
             <p id="main-text">
                 Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
-                Hogy miert? A valasz egyszeru szimplan jofejsegbol.
+                Hogy miert? A valasz egyszeru, jofejsegbol.
             </p>
         </div>
-        <div id="main-box">
-            <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2 id="main-header">Itt talalod a legjobb recepteket</h2>
-            <p id="main-text">
-                Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
-                Hogy miert? A valasz egyszeru szimplan jofejsegbol.
-            </p>
-        </div>
+
     </main>
     <footer>
         <div id="footer-box">
