changed a few settings in style.css to make it more readable

--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
     <footer>
         <div id="footer-box">
             <p>Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.</p>
+            <p>Minden kep amit felhasznaltam nem a sajatom.</p>
         </div>
     </footer>
 </body>
