--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,11 @@
     </main>
     <footer>
         <div id="footer-box">
-            <p>Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.</p>
-            <p>Minden kep amit felhasznaltam nem a sajatom.</p>
+            <div class="footer-textbox">
+                <p >Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                    Minden kep amit felhasznaltam nem a sajatom.
+                </p>
+            </div >
         </div>
     </footer>
 </body>
