--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <nav class="nav-bar">
                 <ul>
                     <li class="nav-item">
+                        <a href="./index.html" class="nav-button">Kezdolap</a>
+                     </li>
+                    <li class="nav-item">
                        <a href="./recipes.html" class="nav-button">Receptek</a>
                     </li>
                     <li class="nav-item">
