trying to make navbar responsive

--- a/index.html
+++ b/index.html
@@ -8,39 +8,44 @@
 </head>
 <body>
     <header>
-        <div id="header-box">
-            <h1>Receptek</h1>
-        </div>
-        <nav class="nav-bar">
-                <ul>
-                    <li class="nav-item">
-                        <a href="./index.html" class="nav-button">Kezdolap</a>
-                     </li>
-                    <li class="nav-item">
-                       <a href="./recipes.html" class="nav-button">Receptek</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./about.html" class="nav-button">Rolunk</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-                    </li>
-                </ul>
-        </nav>
+        <h1>Receptek</h1>
     </header>
+    <nav class="navbar">
+        <ul>
+            <li class="nav-item">
+                <a href="./index.html" class="nav-button">Kezdolap</a>
+             </li>
+            <li class="nav-item">
+               <a href="./recipes.html" class="nav-button">Receptek</a>
+            </li>
+            <li class="nav-item">
+                <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+            </li>
+            <li class="nav-item">
+                <a href="./about.html" class="nav-button">Rolunk</a>
+            </li>
+            <li class="nav-item">
+                <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+            </li>
+        </ul>
+</nav>
     <main>
         <div id="main-box">
             <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2 id="main-header">Itt talalod a legjobb recepteket!</h2>
+            <h2>Itt talalod a legjobb recepteket!</h2>
             <p id="main-text">
                 Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
                 Hogy miert? A valasz egyszeru, jofejsegbol.
             </p>
         </div>
-
+        <div id="main-box">
+            <h2>Funkaciok amik elerhetoek lesznek</h2>
+            <ul>
+                <li>Receptek keszites</li>
+                <li>Receptek modositasa</li>
+                <li>Receptek torlese</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <div id="footer-box">
