--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="./contact.html" class="nav-button">Elerhetosegek</a>
             </li>
         </ul>
-</nav>
+    </nav>
     <main>
         <div id="main-box">
             <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
@@ -50,7 +50,8 @@
     <footer>
         <div id="footer-box">
             <div class="footer-textbox">
-                <p >Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                <p>
+                    Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
                     Minden kep amit felhasznaltam nem a sajatom.
                 </p>
             </div >
