changed to dev branch testing changes in all html pages, new nav,footer etc

--- a/contact.html
+++ b/contact.html
@@ -8,29 +8,27 @@
 </head>
 <body>
     <header>
-        <div id="header-box">
-            <h1>Receptek</h1>
-        </div>
-        <nav class="nav-bar">
-                <ul>
-                    <li class="nav-item">
-                        <a href="./index.html" class="nav-button">Kezdolap</a>
-                     </li>
-                    <li class="nav-item">
-                       <a href="./recipes.html" class="nav-button">Receptek</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./about.html" class="nav-button">Rolunk</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-                    </li>
-                </ul>
-        </nav>
+        <h1>Receptek</h1>
     </header>
+    <nav class="navbar">
+        <ul>
+            <li class="nav-item">
+                <a href="./index.html" class="nav-button">Kezdolap</a>
+             </li>
+            <li class="nav-item">
+               <a href="./recipes.html" class="nav-button">Receptek</a>
+            </li>
+            <li class="nav-item">
+                <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+            </li>
+            <li class="nav-item">
+                <a href="./about.html" class="nav-button">Rolunk</a>
+            </li>
+            <li class="nav-item">
+                <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+            </li>
+        </ul>
+    </nav>
     <main>
         <div id="main-box">
             <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
@@ -46,7 +44,8 @@
     <footer>
         <div id="footer-box">
             <div class="footer-textbox">
-                <p >Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                <p>
+                    Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
                     Minden kep amit felhasznaltam nem a sajatom.
                 </p>
             </div >
