new tags on all pages

--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,15 @@
         <div id="main-box">
             <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
             <h2 id="main-header">Itt kene kint lennie az elerhetosegeknek</h2>
-            <p id="main-text">
-                Termeszetesen egyet sem fogok kirakni...pl
-                Email.: valami@valammi.hu
-                stb.
-            </p>
+            <p id="main-text">Termeszetesen egyet sem fogok kirakni...pl</p>
+        </div>
+        <div id="main-box">
+            <h2>Elerhetosegek:</h2>
+            <ul>
+                <li>E-mail:</li>
+                <li>Facebook</li>
+                <li>Instagram</li>
+            </ul>
         </div>
 
     </main>
