--- a/ingredients.html
+++ b/ingredients.html
@@ -37,6 +37,14 @@
                 Listaba szedtem az elerheto hozzavalokat a lenyeg majd az lesz hogy letretudj hozni,szerkeszteni es torolni tudj majd a sajat fiokodon belul.
             </p>
         </div>
+        <div id="main-box">
+            <h2>Funkaciok amik elerhetoek lesznek</h2>
+            <ul>
+                <li>Hozzavalok keszites</li>
+                <li>Hozzavalok modositasa</li>
+                <li>Hozzavalok torlese</li>
+            </ul>
+        </div>
 
     </main>
     <footer>
