some test to start making responsive html and css. started using flexboxs, new messure like rem etc

--- a/index.html
+++ b/index.html
@@ -7,55 +7,69 @@
     <title>Receptek</title>
 </head>
 <body>
-    <header>
-        <h1>Receptek</h1>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li class="nav-item">
-                <a href="./index.html" class="nav-button">Kezdolap</a>
-             </li>
-            <li class="nav-item">
-               <a href="./recipes.html" class="nav-button">Receptek</a>
-            </li>
-            <li class="nav-item">
-                <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-            </li>
-            <li class="nav-item">
-                <a href="./about.html" class="nav-button">Rolunk</a>
-            </li>
-            <li class="nav-item">
-                <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <div id="main-box">
-            <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2>Itt talalod a legjobb recepteket!</h2>
-            <p id="main-text">
-                Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
-                Hogy miert? A valasz egyszeru, jofejsegbol.
-            </p>
+
+    <div class="container">
+        <div class="row">
+            <header>
+                <h1>Receptek</h1>
+            </header>
         </div>
-        <div id="main-box">
-            <h2>Funkaciok amik elerhetoek lesznek</h2>
-            <ul>
-                <li>Receptek keszites</li>
-                <li>Receptek modositasa</li>
-                <li>Receptek torlese</li>
-            </ul>
+        <div class="row">
+            <nav class="navbar">
+                <ul>
+                    <li class="nav-item">
+                        <a href="./index.html" class="nav-button">Kezdolap</a>
+                    </li>
+                    <li class="nav-item">
+                    <a href="./recipes.html" class="nav-button">Receptek</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./about.html" class="nav-button">Rolunk</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </main>
-    <footer>
-        <div id="footer-box">
-            <div class="footer-textbox">
-                <p>
-                    Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
-                    Minden kep amit felhasznaltam nem a sajatom.
-                </p>
-            </div >
+        <div class="row">
+            <main>
+                <div id="main-box">
+                    <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
+                    <h2>Itt talalod a legjobb recepteket!</h2>
+                    <p id="main-text">
+                        Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
+                        Hogy miert? A valasz egyszeru, jofejsegbol.
+                    </p>
+                </div>
+                <div id="main-box">
+                    <h2>Funkaciok amik elerhetoek lesznek</h2>
+                    <ul>
+                        <li>Receptek keszites</li>
+                        <li>Receptek modositasa</li>
+                        <li>Receptek torlese</li>
+                    </ul>
+                </div>
+            </main>
         </div>
-    </footer>
+        <div class="row">
+            <footer>
+                <div id="footer-box">
+                    <div class="footer-textbox">
+                        <p>
+                            Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                            Minden kep amit felhasznaltam nem a sajatom.
+                        </p>
+                    </div >
+                </div>
+            </footer>
+        </div>
+
+    </div>
+
+
 </body>
 </html>
