--- a/ingredients.html
+++ b/ingredients.html
@@ -31,7 +31,7 @@
     </nav>
     <main>
         <div id="main-box">
-            <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
+            <img id="main-img" src="./imgs/ingredients.jpg" alt="receptkonyv">
             <h2 id="main-header">Hozzavalok</h2>
             <p id="main-text">
                 Listaba szedtem az elerheto hozzavalokat a lenyeg majd az lesz hogy letretudj hozni,szerkeszteni es torolni tudj majd a sajat fiokodon belul.
