recreating the main section in index.html using flexbox

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             </nav>
         </div>
         <div class="row">
-            <main>
-                <div id="main-box">
-                    <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
+            <div class="column">
+                <div class="col col-1">
+                    <img src="./imgs/recipe_book.jpg" alt="recipe-book">
                     <h2>Itt talalod a legjobb recepteket!</h2>
-                    <p id="main-text">
+                    <p>
                         Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
                         Hogy miert? A valasz egyszeru, jofejsegbol.
                     </p>
                 </div>
-                <div id="main-box">
+                <div class="col col-2">
                     <h2>Funkaciok amik elerhetoek lesznek</h2>
                     <ul>
                         <li>Receptek keszites</li>
@@ -53,7 +53,7 @@
                         <li>Receptek torlese</li>
                     </ul>
                 </div>
-            </main>
+            </div>
         </div>
         <div class="row">
             <footer>
