creating new section in main area in index.html

--- a/index.html
+++ b/index.html
@@ -39,19 +39,30 @@
             <div class="column">
                 <div class="col col-1">
                     <img src="./imgs/recipe_book.jpg" alt="recipe-book">
-                    <h2>Itt talalod a legjobb recepteket!</h2>
+                    <h2><span>Itt</span> talalod a legjobb recepteket!</h2>
                     <p>
                         Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
                         Hogy miert? A valasz egyszeru, jofejsegbol.
                     </p>
                 </div>
                 <div class="col col-2">
-                    <h2>Funkaciok amik elerhetoek lesznek</h2>
+                    <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
                         <li>Receptek keszites</li>
                         <li>Receptek modositasa</li>
                         <li>Receptek torlese</li>
                     </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="col-3">
+                    <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
+                        obcaecati repudiandae autem voluptate dolore natus dignissimos 
+                        labore voluptatem iusto quia dolor saepe?
+                    </p>
                 </div>
             </div>
         </div>
