new style for the header, simple and less tags in the header section

--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
         <div class="row">
             <header>
                 <h1>Receptek</h1>
+                <p class="subtitle">Konnyen, gyorsan, egyszeruen!</p>
+                <nav class="navbar">
+                    <ul>
+                        <li class="nav-item">
+                            <a href="./index.html" class="nav-button">Kezdolap</a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./recipes.html" class="nav-button">Receptek</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./about.html" class="nav-button">Rolunk</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
-        </div>
-        <div class="row">
-            <nav class="navbar">
-                <ul>
-                    <li class="nav-item">
-                        <a href="./index.html" class="nav-button">Kezdolap</a>
-                    </li>
-                    <li class="nav-item">
-                    <a href="./recipes.html" class="nav-button">Receptek</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./about.html" class="nav-button">Rolunk</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-                    </li>
-                </ul>
-            </nav>
         </div>
         <div class="row">
             <div class="column">
@@ -56,7 +55,7 @@
             </div>
             <div class="column">
                 <div class="col-3">
-                    <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                    <h2><span>Lorem</span>ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
