--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Receptek</title>
 </head>
 <body>
-
     <div class="container">
         <div class="row">
             <header>
@@ -37,8 +36,8 @@
         <div class="row">
             <div class="column">
                 <div class="col col-1">
-                    <img src="./imgs/recipe_book.jpg" alt="recipe-book">
                     <h2><span>Itt</span> talalod a legjobb recepteket!</h2>
+                    <img src="./imgs/recipe_book.jpg" alt="recipe-book">
                     <p>
                         Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
                         Hogy miert? A valasz egyszeru, jofejsegbol.
@@ -47,6 +46,7 @@
                 <div class="col col-2">
                     <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
+                        <li>Receptek megtekintese</li>
                         <li>Receptek keszites</li>
                         <li>Receptek modositasa</li>
                         <li>Receptek torlese</li>
@@ -54,8 +54,12 @@
                 </div>
             </div>
             <div class="column">
-                <div class="col-3">
-                    <h2><span>Lorem</span>ipsum dolor sit amet consectetur</h2>
+                <div class="col col-2">
+                    <h2><span>Kovesd nyomon</span> milyen hozzavalokkal egeszitik ki masok a recepteket</h2>
+                    <img src="./imgs/ingredients.jpg" alt="ingredients">
+                </div>
+                <div class="col col-1">
+                    <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
@@ -67,19 +71,17 @@
         </div>
         <div class="row">
             <footer>
-                <div id="footer-box">
-                    <div class="footer-textbox">
+                <div class="column">
+                    <div class="col">
+                        <h2>Info:</h2>
                         <p>
-                            Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                            <span>Ez </span>az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
                             Minden kep amit felhasznaltam nem a sajatom.
                         </p>
-                    </div >
+                    </div>
                 </div>
             </footer>
         </div>
-
     </div>
-
-
 </body>
 </html>
