copy paste to other pages wich was still the older versions

--- a/ingredients.html
+++ b/ingredients.html
@@ -36,14 +36,15 @@
         <div class="row">
             <div class="column">
                 <div class="col col-1">
+                    <h2><span>Itt</span> talalhatod majd az osszes hozzavalot!</h2>
                     <img src="./imgs/recipe_book.jpg" alt="recipe-book">
-                    <h2>
-                        <span>Listaba</span> szedtem az elerheto hozzavalokat a lenyeg majd az lesz hogy letretudj hozni,szerkeszteni es torolni tudj majd a sajat fiokodon belul.
-                    </h2>
+                    <p>
+                    </p>
                 </div>
                 <div class="col col-2">
-                    <h2>Funkaciok amik elerhetoek lesznek</h2>
+                    <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
+                        <li>Hozzavalok megtekintese</li>
                         <li>Hozzavalok keszites</li>
                         <li>Hozzavalok modositasa</li>
                         <li>Hozzavalok torlese</li>
@@ -51,8 +52,12 @@
                 </div>
             </div>
             <div class="column">
-                <div class="col-3">
-                    <h2><span>Lorem</span>ipsum dolor sit amet consectetur</h2>
+                <div class="col col-2">
+                    <h2><span>Kovesd nyomon</span> milyen recepteket hasznalnak masok az elerheto hozzavalokbol</h2>
+                    <img src="./imgs/ingredients.jpg" alt="ingredients">
+                </div>
+                <div class="col col-1">
+                    <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
@@ -64,17 +69,17 @@
         </div>
         <div class="row">
             <footer>
-                <div id="footer-box">
-                    <div class="footer-textbox">
+                <div class="column">
+                    <div class="col">
+                        <h2>Info:</h2>
                         <p>
-                            Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                            <span>Ez </span>az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
                             Minden kep amit felhasznaltam nem a sajatom.
                         </p>
-                    </div >
+                    </div>
                 </div>
             </footer>
         </div>
     </div>
 </body>
 </html>
-
