--- a/contact.html
+++ b/contact.html
@@ -7,53 +7,78 @@
     <title>Receptek</title>
 </head>
 <body>
-    <header>
-        <h1>Receptek</h1>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li class="nav-item">
-                <a href="./index.html" class="nav-button">Kezdolap</a>
-             </li>
-            <li class="nav-item">
-               <a href="./recipes.html" class="nav-button">Receptek</a>
-            </li>
-            <li class="nav-item">
-                <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-            </li>
-            <li class="nav-item">
-                <a href="./about.html" class="nav-button">Rolunk</a>
-            </li>
-            <li class="nav-item">
-                <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <div id="main-box">
-            <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2 id="main-header">Itt kene kint lennie az elerhetosegeknek</h2>
-            <p id="main-text">Termeszetesen egyet sem fogok kirakni...pl</p>
+    <div class="container">
+        <div class="row">
+            <header>
+                <h1>Receptek</h1>
+                <p class="subtitle">Konnyen, gyorsan, egyszeruen!</p>
+                <nav class="navbar">
+                    <ul>
+                        <li class="nav-item">
+                            <a href="./index.html" class="nav-button">Kezdolap</a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./recipes.html" class="nav-button">Receptek</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./about.html" class="nav-button">Rolunk</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
         </div>
-        <div id="main-box">
-            <h2>Elerhetosegek:</h2>
-            <ul>
-                <li>E-mail:</li>
-                <li>Facebook</li>
-                <li>Instagram</li>
-            </ul>
+        <div class="row">
+            <div class="column">
+                <div class="col col-1">
+                    <h2><span>Itt</span> talalod minden elerhetosegunket:</h2>
+                    <img src="./imgs/recipe_book.jpg" alt="recipe-book">
+                    <p>Kerdes eseten nyugodtan fordulj hozzank batran. Minden visszajelzest szivesen veszunk az oldallal kapcsolatban</p>
+                </div>
+                <div class="col col-2">
+                    <h2><span>El</span>erhetosegek</h2>
+                    <ul>
+                        <li>Email:</li>
+                        <li>Tel:</li>
+                        <li>Valami mas:</li>
+                        <li>Valami egyeb:</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="col col-2">
+                    <h2><span>Kovesd nyomon</span> mindent mas forumokon is! </h2>
+                    <img src="./imgs/ingredients.jpg" alt="ingredients">
+                </div>
+                <div class="col col-1">
+                    <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
+                        obcaecati repudiandae autem voluptate dolore natus dignissimos 
+                        labore voluptatem iusto quia dolor saepe?
+                    </p>
+                </div>
+            </div>
         </div>
-
-    </main>
-    <footer>
-        <div id="footer-box">
-            <div class="footer-textbox">
-                <p>
-                    Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
-                    Minden kep amit felhasznaltam nem a sajatom.
-                </p>
-            </div >
+        <div class="row">
+            <footer>
+                <div class="column">
+                    <div class="col">
+                        <h2>Info:</h2>
+                        <p>
+                            <span>Ez </span>az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                            Minden kep amit felhasznaltam nem a sajatom.
+                        </p>
+                    </div>
+                </div>
+            </footer>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
