--- a/recipes.html
+++ b/recipes.html
@@ -7,47 +7,81 @@
     <title>Receptek</title>
 </head>
 <body>
-    <header>
-        <h1>Receptek</h1>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li class="nav-item">
-                <a href="./index.html" class="nav-button">Kezdolap</a>
-             </li>
-            <li class="nav-item">
-               <a href="./recipes.html" class="nav-button">Receptek</a>
-            </li>
-            <li class="nav-item">
-                <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
-            </li>
-            <li class="nav-item">
-                <a href="./about.html" class="nav-button">Rolunk</a>
-            </li>
-            <li class="nav-item">
-                <a href="./contact.html" class="nav-button">Elerhetosegek</a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <div id="main-box">
-            <img id="main-img" src="./imgs/recipe_book.jpg" alt="receptkonyv">
-            <h2 id="main-header">Itt az osszes elerheto receptet megtalalod!</h2>
-            <p id="main-text">
-             Valogass majd kedvedre ha tudsz de mivel ez egy demo nem fogsz tudni!
-            </p>
+    <div class="container">
+        <div class="row">
+            <header>
+                <h1>Receptek</h1>
+                <p class="subtitle">Konnyen, gyorsan, egyszeruen!</p>
+                <nav class="navbar">
+                    <ul>
+                        <li class="nav-item">
+                            <a href="./index.html" class="nav-button">Kezdolap</a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./recipes.html" class="nav-button">Receptek</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./ingredients.html" class="nav-button">Hozzavalok</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./about.html" class="nav-button">Rolunk</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-button">Elerhetosegek</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
         </div>
-
-    </main>
-    <footer>
-        <div id="footer-box">
-            <div class="footer-textbox">
-                <p>
-                    Ez az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
-                    Minden kep amit felhasznaltam nem a sajatom.
-                </p>
-            </div >
+        <div class="row">
+            <div class="column">
+                <div class="col col-1">
+                    <h2><span>Itt</span> talalod a legjobb recepteket!</h2>
+                    <img src="./imgs/recipe_book.jpg" alt="recipe-book">
+                    <p>
+                        Megprobalom osszegyujteni a legfinomabb es legegyszerubben elkeszitheto recepteket, hogy neked ezzel ne keljen mar bajlodni.
+                        Hogy miert? A valasz egyszeru, jofejsegbol.
+                    </p>
+                </div>
+                <div class="col col-2">
+                    <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
+                    <ul>
+                        <li>Receptek megtekintese</li>
+                        <li>Receptek keszites</li>
+                        <li>Receptek modositasa</li>
+                        <li>Receptek torlese</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="col col-2">
+                    <h2><span>Kovesd nyomon</span> milyen hozzavalokkal egeszitik ki masok a recepteket</h2>
+                    <img src="./imgs/ingredients.jpg" alt="ingredients">
+                </div>
+                <div class="col col-1">
+                    <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Hic quam perspiciatis  doloremque sit aut, ab ratione modi 
+                        obcaecati repudiandae autem voluptate dolore natus dignissimos 
+                        labore voluptatem iusto quia dolor saepe?
+                    </p>
+                </div>
+            </div>
         </div>
-    </footer>
+        <div class="row">
+            <footer>
+                <div class="column">
+                    <div class="col">
+                        <h2>Info:</h2>
+                        <p>
+                            <span>Ez </span>az oldal azert jott letre hogy en gyakorolni tudjak es elsajatitsak minel tobbet a weboldalak keszitesenek alapjairol.
+                            Minden kep amit felhasznaltam nem a sajatom.
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
