--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         Hogy miert? A valasz egyszeru, jofejsegbol.
                     </p>
                 </div>
-                <div class="col col-2">
+                <div class="col col-2 col-color">
                     <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
                         <li>Receptek megtekintese</li>
@@ -58,7 +58,7 @@
                     <h2><span>Kovesd nyomon</span> milyen hozzavalokkal egeszitik ki masok a recepteket</h2>
                     <img src="./imgs/ingredients.jpg" alt="ingredients">
                 </div>
-                <div class="col col-1">
+                <div class="col col-1 col-color">
                     <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
