adding backgorund color selector to the other pages to match thy style with index

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="column">
-                <div class="col col-1">
+                <div class="col col-1 col-color">
                     <h2><span>Itt</span> talalod a legjobb recepteket!</h2>
                     <img src="./imgs/recipe_book.jpg" alt="recipe-book">
                     <p>
@@ -58,7 +58,7 @@
                     <h2><span>Kovesd nyomon</span> milyen hozzavalokkal egeszitik ki masok a recepteket</h2>
                     <img src="./imgs/ingredients.jpg" alt="ingredients">
                 </div>
-                <div class="col col-1">
+                <div class="col col-1 col-color">
                     <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
