--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <img src="./imgs/recipe_book.jpg" alt="recipe-book">
                     <p>Kerdes eseten nyugodtan fordulj hozzank batran. Minden visszajelzest szivesen veszunk az oldallal kapcsolatban</p>
                 </div>
-                <div class="col col-2">
+                <div class="col col-2 col-color">
                     <h2><span>El</span>erhetosegek</h2>
                     <ul>
                         <li>Email:</li>
@@ -51,11 +51,11 @@
                 </div>
             </div>
             <div class="column">
-                <div class="col col-2">
+                <div class="col col-2 ">
                     <h2><span>Kovesd nyomon</span> mindent mas forumokon is! </h2>
                     <img src="./imgs/ingredients.jpg" alt="ingredients">
                 </div>
-                <div class="col col-1">
+                <div class="col col-1 col-color">
                     <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
