--- a/ingredients.html
+++ b/ingredients.html
@@ -41,7 +41,7 @@
                     <p>
                     </p>
                 </div>
-                <div class="col col-2">
+                <div class="col col-2 col-color">
                     <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
                         <li>Hozzavalok megtekintese</li>
@@ -56,7 +56,7 @@
                     <h2><span>Kovesd nyomon</span> milyen recepteket hasznalnak masok az elerheto hozzavalokbol</h2>
                     <img src="./imgs/ingredients.jpg" alt="ingredients">
                 </div>
-                <div class="col col-1">
+                <div class="col col-1 col-color">
                     <h2><span>Lorem</span> ipsum dolor sit amet consectetur</h2>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
