--- a/recipes.html
+++ b/recipes.html
@@ -43,7 +43,7 @@
                         Hogy miert? A valasz egyszeru, jofejsegbol.
                     </p>
                 </div>
-                <div class="col col-2">
+                <div class="col col-2 col-color">
                     <h2><span>Funkaciok</span> amik elerhetoek lesznek</h2>
                     <ul>
                         <li>Receptek megtekintese</li>
